<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_honeycomb">

    <TextView
        android:id="@+id/incomingCallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_call_title"
        android:textColor="@color/stealthx_red"
        android:textSize="@dimen/text_label_small"
        android:layout_marginTop="@dimen/spacing_xl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/incomingAvatar"
        android:layout_width="@dimen/avatar_size_large"
        android:layout_height="@dimen/avatar_size_large"
        android:src="@drawable/ic_contacts"
        android:padding="24dp"
        android:background="@color/stealthx_gray"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.SecureCall.Circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:contentDescription="@string/cd_caller_avatar" />

    <TextView
        android:id="@+id/incomingCallerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_headline_medium"
        android:textColor="@color/stealthx_white"
        app:layout_constraintTop_toBottomOf="@id/incomingAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_lg" />

    <TextView
        android:id="@+id/incomingCallerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/stealthx_white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/incomingCallerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/incomingCallerSecureId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/caller_secure_id_cyan"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/incomingCallerPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_lg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/spacing_xl">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDeclineCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/call_fab_margin"
            android:src="@drawable/ic_call_end"
            app:backgroundTint="@color/call_end_red"
            android:contentDescription="@string/call_decline"
            app:fabSize="auto"
            app:fabCustomSize="72dp"
            app:tint="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAcceptCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/call_fab_margin"
            android:src="@drawable/ic_call"
            app:backgroundTint="@color/call_active_green"
            android:contentDescription="@string/call_accept"
            app:fabSize="auto"
            app:fabCustomSize="72dp"
            app:tint="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
